add initial "add new recipe" form & show/hide form functions

--- a/index.html
+++ b/index.html
@@ -84,6 +84,20 @@
 
 
 
+<!-- ====================== ADD NEW RECIPE FORM START ====================== -->
+<form id="add-recipe-form" action="javascript:void(0);">
+  <h2>Add New Recipe</h2>
+  <label for="name-input">Name</label>
+  <input type="text" name="name" id="name-input"></input>
+
+  <br>
+  <button type="submit" name="add-recipe-submit" id="add-recipe-submit"
+  aria-label="submit new recipe">Add Recipe</button>
+</form>
+<!-- _______________________ ADD NEW RECIPE FORM END _______________________ -->
+
+
+
 <!-- ====================== BODY GRID CONTAINER START ====================== -->
     <div id="body-grid-container">
 <!-- =================== SAVED RECIPE LIST SCREEN START =================== -->
