edit custom recipe object constructor functionality(ingredient input)

--- a/index.html
+++ b/index.html
@@ -91,6 +91,10 @@
   <input type="text" name="name" id="name-input"></input>
 
   <br>
+  <label for="ingredient-input">Ingredients</label>
+  <input type="text" name="ingredients" id="ingredient-input"></input>
+
+  <br>
   <button type="submit" name="add-recipe-submit" id="add-recipe-submit"
   aria-label="submit new recipe">Add Recipe</button>
 </form>
