edit custom recipe object constructor functionality(tag input)

--- a/index.html
+++ b/index.html
@@ -91,7 +91,11 @@
   <input type="text" name="name" id="name-input"></input>
 
   <br>
-  <label for="ingredient-input">Ingredients</label>
+  <label for="tag-input">Search Tags (comma separated, five max)</label>
+  <input type="text" name="tags" id="tag-input"></input>
+
+  <br>
+  <label for="ingredient-input">Ingredients (comma separated)</label>
   <input type="text" name="ingredients" id="ingredient-input"></input>
 
   <br>
