--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="main-style.css">
+  <link rel="stylesheet" type="text/css" href="navbar-style.css">
+  <link rel="stylesheet" type="text/css" href="add-recipe-popup/add-recipe-popup-style.css">
   <link rel="stylesheet" type="text/css" href="displayed-recipe-screen/DRS-style.css">
   <link rel="stylesheet" type="text/css" href="new-recipe-finder-screen/NRFS-style.css">
   <link rel="stylesheet" type="text/css" href="new-recipe-list-screen/NRLS-style.css">
@@ -33,6 +35,7 @@
   <script type="text/javascript" src="main-script.js" defer></script>
   <script type="text/javascript" src="navbar-script.js" defer></script>
   <script type="text/javascript" src="saved-recipe-list-screen-script.js" defer></script>
+  <script type="text/javascript" src="add-recipe-popup/add-recipe-popup-script.js" defer></script>
   <script type="text/javascript" src="displayed-recipe-screen/DRS-script.js" defer></script>
   <script type="text/javascript" src="new-recipe-finder-screen/NRFS-script.js" defer></script>
   <script type="text/javascript" src="new-recipe-list-screen/NRLS-script.js" defer></script>
