add initial "add recipe form" media queries

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       </div>
 
       <div id="add-recipe-form-grid">
-        <fieldset>
+        <fieldset id="name-fieldset">
           <legend for="name-input">Name</legend>
           <input type="text" name="name" id="name-input" placeholder="enter a name..."></input>
         </fieldset>
