--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
       <div id="add-recipe-form-grid">
         <fieldset id="name-fieldset">
           <legend for="name-input">Name</legend>
-          <input type="text" name="name" id="name-input" placeholder="enter a name..."></input>
+          <input type="text" name="name" id="name-input" class="add-recipe-form-input"
+          placeholder="enter a name..."></input>
         </fieldset>
 
         <fieldset id="category-field">
@@ -116,17 +117,20 @@
 
         <fieldset>
           <legend>Search Tags <span>(comma separated, five max)</span></legend>
-          <input type="text" name="tags" id="tag-input" placeholder="enter search tags..."></input>
+          <input type="text" name="tags" id="tag-input" class="add-recipe-form-input"
+          placeholder="enter search tags..."></input>
         </fieldset>
 
         <fieldset>
           <legend>Ingredients <span>(comma separated)</span></legend>
-          <input type="text" name="ingredients" id="ingredient-input" placeholder="enter ingredients..."></input>
+          <input type="text" name="ingredients" id="ingredient-input" class="add-recipe-form-input"
+          placeholder="enter ingredients..."></input>
         </fieldset>
 
         <fieldset>
           <legend>Recipe Steps <span>(comma separated)</span></legend>
-          <input type="text" name="recipeStep" class="recipe-step-input" placeholder="enter recipe step..."></input>
+          <input type="text" name="recipeStep" id="recipe-step-input" class="add-recipe-form-input"
+          placeholder="enter recipe step..."></input>
         </fieldset>
       </div>
 
