edit "add recipe form" input navbar hiding script for touch device
scroll to input on focus

--- a/index.html
+++ b/index.html
@@ -132,6 +132,8 @@
           <input type="text" name="recipeStep" id="recipe-step-input" class="add-recipe-form-input"
           placeholder="enter recipe step..."></input>
         </fieldset>
+
+        <div id="add-recipe-form-touch-spacer"></div>
       </div>
 
       <button type="submit" name="add-recipe-submit" id="add-recipe-submit"
