add delete-icon to displayed reciped screen bottom options bar

--- a/index.html
+++ b/index.html
@@ -266,6 +266,7 @@
     <div id="bottom-option-bar">
       <div id="back-button"></div>
       <div id="font-size-button"><span id="font-size-button-span">A</span>A</div>
+      <i id="delete-recipe-icon" class="fa fa-trash" aria-hidden="true"></i>
     </div>
 <!-- _______________________ BOTTOM OPTIONS BAR END _______________________ -->
   </div>
