add initial delete recipe modal & show/hide/toggle functionality

--- a/index.html
+++ b/index.html
@@ -143,6 +143,24 @@
 
 
 
+<!-- ====================== DELETE RECIPE MODAL START ====================== -->
+    <div id="delete-recipe-modal">
+      <h2>Delete Recipe</h2>
+
+      <div id="delete-recipe-close-icon">
+        <div class="hamburger-bar" id="delete-recipe-close-bar-top"></div>
+        <div class="hamburger-bar hide-bar-middle"></div>
+        <div class="hamburger-bar" id="delete-recipe-close-bar-bottom"></div>
+      </div>
+
+      <p>Are you sure you want to delete "<span id="delete-recipe-name-span"> </span>" from your saved recipes?</p>
+      <button id="delete-recipe-confirm">Yes, Delete</button>
+      <button id="delete-recipe-cancel">No</button>
+    </div>
+<!-- _______________________ DELETE RECIPE MODAL END _______________________ -->
+
+
+
 <!-- ====================== BODY GRID CONTAINER START ====================== -->
     <div id="body-grid-container">
 <!-- =================== SAVED RECIPE LIST SCREEN START =================== -->
