add initial deleteRecipeConfirm/Cancel functionality & edit modal style

--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
       </div>
 
       <p>Are you sure you want to delete "<span id="delete-recipe-name-span"> </span>" from your saved recipes?</p>
-      <button id="delete-recipe-confirm">Yes, Delete</button>
-      <button id="delete-recipe-cancel">No</button>
+      <button id="delete-recipe-confirm-button" class="delete-recipe-modal-button">Yes, Delete</button>
+      <button id="delete-recipe-cancel-button" class="delete-recipe-modal-button">Cancel</button>
     </div>
 <!-- _______________________ DELETE RECIPE MODAL END _______________________ -->
 
