edit add recipe popup style(popup height/fieldset margins)

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           placeholder="enter ingredients..."></input>
         </fieldset>
 
-        <fieldset>
+        <fieldset id="recipe-step-fieldset">
           <legend>Recipe Steps <span>(comma separated)</span></legend>
           <input type="text" name="recipeStep" id="recipe-step-input" class="add-recipe-form-input"
           placeholder="enter recipe step..."></input>
