add addButtonMouseTouchEvents function/button-theme class

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
       <div id="add-recipe-bar-bottom">
         <button type="submit" name="add-recipe-submit" id="add-recipe-submit"
-        aria-label="submit new recipe">Add Recipe</button>
+        class="button-theme" aria-label="submit new recipe">Add Recipe</button>
       </div>
     </form>
 <!-- _______________________ ADD NEW RECIPE FORM END _______________________ -->
@@ -167,8 +167,8 @@
         <p>Are you sure you want to delete: <span id="delete-recipe-name-span"> </span></p>
       </div>
 
-      <button id="delete-recipe-confirm-button" class="delete-recipe-modal-button">Yes, Delete</button>
-      <button id="delete-recipe-cancel-button" class="delete-recipe-modal-button">Cancel</button>
+      <button id="delete-recipe-confirm-button" class="delete-recipe-modal-button button-theme">Yes, Delete</button>
+      <button id="delete-recipe-cancel-button" class="delete-recipe-modal-button button-theme">Cancel</button>
     </div>
 <!-- _______________________ DELETE RECIPE MODAL END _______________________ -->
 
@@ -259,7 +259,7 @@
         </a>
         <div id="edamam-badge" data-color="transparent"></div>
 
-        <div id="new-recipe-search-button">Search</div>
+        <div id="new-recipe-search-button" class="button-theme">Search</div>
       </div>
 <!-- ____________________ NEW RECIPE FINDER SCREEN END ____________________ -->
 
